--- a/package.json
+++ b/package.json
@@ -12,6 +12,21 @@
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "installDeps": "yarn && cd client && yarn"
   },
+  "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
+    "jquery": "^2.2.1",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
+    "express": "^4.13.3",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
